force-app/main/default/objects/Position_History__c/Position_History__c.object-meta.xml
<CustomObject>
    <label>Position History</label>
    <nameField>
        <displayFormat>PH-{00000}</displayFormat>
        <label>Position History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position Histories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>