force-app/main/default/objects/Position_History__c/fields/I_RS_Campus__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Campus__c</fullName>
    <label>Campus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>