force-app/main/default/objects/Position_History__c/fields/I_RS_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Position Histories</relationshipLabel>
    <relationshipName>Position_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>