force-app/main/default/objects/Position_History__c/fields/I_RS_Department_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Department_Code__c</fullName>
    <label>Department Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>