force-app/main/default/objects/Position_History__c/fields/I_RS_Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Employment_Type__c</fullName>
    <label>Employment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>