force-app/main/default/objects/Position_History__c/fields/I_RS_FTE__c.field-meta.xml
<CustomField>
    <fullName>I_RS_FTE__c</fullName>
    <label>FTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>