force-app/main/default/objects/Position_History__c/fields/I_RS_IsDirect__c.field-meta.xml
<CustomField>
    <fullName>I_RS_IsDirect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDirect</label>
    <type>Checkbox</type>
</CustomField>