force-app/main/default/objects/Position_History__c/fields/I_RS_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation_Name__c</fullName>
    <label>Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>