force-app/main/default/objects/Position_History__c/fields/I_RS_Position_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Position_Description__c</fullName>
    <label>Position Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>