force-app/main/default/objects/Position_History__c/fields/I_RS_Salary_Grade_level__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Salary_Grade_level__c</fullName>
    <label>Salary Grade/level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>