force-app/main/default/objects/Position_History__c/fields/I_RS_School_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_School_Name__c</fullName>
    <label>School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>