force-app/main/default/objects/Position_History__c/fields/I_RS_Staff_Group_Desc__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Staff_Group_Desc__c</fullName>
    <label>Staff Group Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>