force-app/main/default/objects/Position_History__c/fields/I_RS_Staff_SubGroup_Desc__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Staff_SubGroup_Desc__c</fullName>
    <label>Staff SubGroup Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>